--- a/aux_plots_tables.ipynb
+++ b/aux_plots_tables.ipynb
@@ -2,11 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This unreleased version of SpacePy is not supported by the SpacePy team.\n"
+     ]
+    }
+   ],
    "source": [
     "# import modules\n",
     "import glob\n",
@@ -470,19 +478,525 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 110,
    "outputs": [
     {
      "data": {
-      "text/plain": "-2"
+      "text/plain": "Index(['date', 'nel_radar', 'n_profiles', 'nel_gf', 'nel_diff', 'radar',\n       'radar_file', 'mission', 'radar_mnemonic', 'radar_mnemonic_unique',\n       'mission_unique', 'Latitude', 'Longitude', 'Location'],\n      dtype='object')"
      },
-     "execution_count": 86,
+     "execution_count": 110,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "2018-2020"
+    "df.columns"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 108,
+   "outputs": [],
+   "source": [
+    "df = pd.read_csv('../tables/v2/conjunctions_clean_{mission}.csv'.format(mission='GF')).drop(['Unnamed: 0'], axis=1)\n",
+    "df['date'] = pd.to_datetime(df['date'])"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 114,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Poker Flat 0.446\n",
+      "Millstone Hill 0.351\n",
+      "Tromso 0.273\n",
+      "Resolute Bay 0.304\n",
+      "Svalbard 0.126\n",
+      "Arecibo 0.951\n",
+      "Jicamarca 0.425\n"
+     ]
+    }
+   ],
+   "source": [
+    "for location in df.Location.unique():\n",
+    "\n",
+    "    df_plot = df[df.Location == location]\n",
+    "\n",
+    "\n",
+    "    print(location, np.round(df_plot.corr().loc['nel_gf','nel_radar'],3))"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 126,
+   "outputs": [],
+   "source": [
+    "gf_files = glob.glob('../data/processed/Absolute_Ne_v2/*/*.csv')"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 127,
+   "outputs": [],
+   "source": [
+    "with_nan = []\n",
+    "without_nan = []\n",
+    "\n",
+    "for gf_file in gf_files:\n",
+    "    df = pd.read_csv(gf_file)\n",
+    "    df_wn = df.dropna()\n",
+    "\n",
+    "    with_nan.append(len(df))\n",
+    "    without_nan.append(len(df_wn))"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 128,
+   "outputs": [],
+   "source": [
+    "final_df = pd.DataFrame({'with':with_nan,\n",
+    "              'without:': without_nan})"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 129,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "with        94147304\nwithout:    93482722\ndtype: int64"
+     },
+     "execution_count": 129,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "final_df.sum(axis=0)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 130,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "0.003541981068637703"
+     },
+     "execution_count": 130,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(94147304 - 93482722)/(94147304 + 93482722)\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 131,
+   "outputs": [],
+   "source": [
+    "df = pd.read_csv('../data/processed/Absolute_Ne_v2/GRACE/GR_OPER_NE__KBR_2F_20020405T000000_20020405T235959_0101.cdf.csv')"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 132,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "       Unnamed: 0            Timestamp   Latitude   Longitude        Radius  \\\n0               0  2002-04-04 23:59:47 -14.672051  -20.775491  6.862383e+06   \n1               1  2002-04-04 23:59:52 -14.990418  -20.790607  6.862409e+06   \n2               2  2002-04-04 23:59:57 -15.308780  -20.805705  6.862435e+06   \n3               3  2002-04-05 00:00:02 -15.627139  -20.820785  6.862461e+06   \n4               4  2002-04-05 00:00:07 -15.945493  -20.835848  6.862487e+06   \n...           ...                  ...        ...         ...           ...   \n17275       17275  2002-04-05 23:59:22 -84.198238  148.338702  6.876248e+06   \n17276       17276  2002-04-05 23:59:27 -83.885781  148.817183  6.876322e+06   \n17277       17277  2002-04-05 23:59:32 -83.572914  149.247241  6.876396e+06   \n17278       17278  2002-04-05 23:59:37 -83.259694  149.635570  6.876470e+06   \n17279       17279  2002-04-05 23:59:42 -82.946171  149.987690  6.876544e+06   \n\n       Iono_Corr       Distance  Relative_Hor_TEC   Relative_Ne   Absolute_Ne  \\\n0       0.001120  227343.605771          2.845766  1.251747e+11  1.926025e+11   \n1       0.000976  227333.490241          2.480816  1.091267e+11  1.765546e+11   \n2       0.000845  227323.304190          2.148044  9.449292e+10  1.619208e+11   \n3       0.000726  227313.047970          1.844370  8.113787e+10  1.485657e+11   \n4       0.000616  227302.721938          1.566436  6.891409e+10  1.363419e+11   \n...          ...            ...               ...           ...           ...   \n17275   0.001699  219768.764317          4.317529  1.964578e+11  2.638856e+11   \n17276   0.001658  219757.993141          4.213775  1.917461e+11  2.591740e+11   \n17277   0.001569  219747.274672          3.987700  1.814676e+11  2.488954e+11   \n17278   0.001595  219736.609257          4.053582  1.844746e+11  2.519024e+11   \n17279   0.001544  219725.997236          3.922587  1.785218e+11  2.459496e+11   \n\n       Flag           Re       mlat       mlon        mlt  \n0         1  6376.775809 -23.093782  47.852129  22.407791  \n1         1  6376.717431 -23.360985  47.731029  22.401084  \n2         1  6376.657916 -23.626200  47.609812  22.394369  \n3         1  6376.597270 -23.889462  47.488501  22.387648  \n4         1  6376.535501 -24.150805  47.367119  22.380922  \n...     ...          ...        ...        ...        ...  \n17275     1  6356.972348 -80.020156   4.870334  19.544244  \n17276     1  6356.996626 -80.238671   3.617069  19.462058  \n17277     1  6357.022191 -80.452858   2.304511  19.375920  \n17278     1  6357.049040 -80.662349   0.929834  19.285640  \n17279     1  6357.077170 -80.866752  -0.509777  19.191032  \n\n[17280 rows x 15 columns]",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Unnamed: 0</th>\n      <th>Timestamp</th>\n      <th>Latitude</th>\n      <th>Longitude</th>\n      <th>Radius</th>\n      <th>Iono_Corr</th>\n      <th>Distance</th>\n      <th>Relative_Hor_TEC</th>\n      <th>Relative_Ne</th>\n      <th>Absolute_Ne</th>\n      <th>Flag</th>\n      <th>Re</th>\n      <th>mlat</th>\n      <th>mlon</th>\n      <th>mlt</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>0</td>\n      <td>2002-04-04 23:59:47</td>\n      <td>-14.672051</td>\n      <td>-20.775491</td>\n      <td>6.862383e+06</td>\n      <td>0.001120</td>\n      <td>227343.605771</td>\n      <td>2.845766</td>\n      <td>1.251747e+11</td>\n      <td>1.926025e+11</td>\n      <td>1</td>\n      <td>6376.775809</td>\n      <td>-23.093782</td>\n      <td>47.852129</td>\n      <td>22.407791</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>1</td>\n      <td>2002-04-04 23:59:52</td>\n      <td>-14.990418</td>\n      <td>-20.790607</td>\n      <td>6.862409e+06</td>\n      <td>0.000976</td>\n      <td>227333.490241</td>\n      <td>2.480816</td>\n      <td>1.091267e+11</td>\n      <td>1.765546e+11</td>\n      <td>1</td>\n      <td>6376.717431</td>\n      <td>-23.360985</td>\n      <td>47.731029</td>\n      <td>22.401084</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>2</td>\n      <td>2002-04-04 23:59:57</td>\n      <td>-15.308780</td>\n      <td>-20.805705</td>\n      <td>6.862435e+06</td>\n      <td>0.000845</td>\n      <td>227323.304190</td>\n      <td>2.148044</td>\n      <td>9.449292e+10</td>\n      <td>1.619208e+11</td>\n      <td>1</td>\n      <td>6376.657916</td>\n      <td>-23.626200</td>\n      <td>47.609812</td>\n      <td>22.394369</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>3</td>\n      <td>2002-04-05 00:00:02</td>\n      <td>-15.627139</td>\n      <td>-20.820785</td>\n      <td>6.862461e+06</td>\n      <td>0.000726</td>\n      <td>227313.047970</td>\n      <td>1.844370</td>\n      <td>8.113787e+10</td>\n      <td>1.485657e+11</td>\n      <td>1</td>\n      <td>6376.597270</td>\n      <td>-23.889462</td>\n      <td>47.488501</td>\n      <td>22.387648</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>4</td>\n      <td>2002-04-05 00:00:07</td>\n      <td>-15.945493</td>\n      <td>-20.835848</td>\n      <td>6.862487e+06</td>\n      <td>0.000616</td>\n      <td>227302.721938</td>\n      <td>1.566436</td>\n      <td>6.891409e+10</td>\n      <td>1.363419e+11</td>\n      <td>1</td>\n      <td>6376.535501</td>\n      <td>-24.150805</td>\n      <td>47.367119</td>\n      <td>22.380922</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>17275</th>\n      <td>17275</td>\n      <td>2002-04-05 23:59:22</td>\n      <td>-84.198238</td>\n      <td>148.338702</td>\n      <td>6.876248e+06</td>\n      <td>0.001699</td>\n      <td>219768.764317</td>\n      <td>4.317529</td>\n      <td>1.964578e+11</td>\n      <td>2.638856e+11</td>\n      <td>1</td>\n      <td>6356.972348</td>\n      <td>-80.020156</td>\n      <td>4.870334</td>\n      <td>19.544244</td>\n    </tr>\n    <tr>\n      <th>17276</th>\n      <td>17276</td>\n      <td>2002-04-05 23:59:27</td>\n      <td>-83.885781</td>\n      <td>148.817183</td>\n      <td>6.876322e+06</td>\n      <td>0.001658</td>\n      <td>219757.993141</td>\n      <td>4.213775</td>\n      <td>1.917461e+11</td>\n      <td>2.591740e+11</td>\n      <td>1</td>\n      <td>6356.996626</td>\n      <td>-80.238671</td>\n      <td>3.617069</td>\n      <td>19.462058</td>\n    </tr>\n    <tr>\n      <th>17277</th>\n      <td>17277</td>\n      <td>2002-04-05 23:59:32</td>\n      <td>-83.572914</td>\n      <td>149.247241</td>\n      <td>6.876396e+06</td>\n      <td>0.001569</td>\n      <td>219747.274672</td>\n      <td>3.987700</td>\n      <td>1.814676e+11</td>\n      <td>2.488954e+11</td>\n      <td>1</td>\n      <td>6357.022191</td>\n      <td>-80.452858</td>\n      <td>2.304511</td>\n      <td>19.375920</td>\n    </tr>\n    <tr>\n      <th>17278</th>\n      <td>17278</td>\n      <td>2002-04-05 23:59:37</td>\n      <td>-83.259694</td>\n      <td>149.635570</td>\n      <td>6.876470e+06</td>\n      <td>0.001595</td>\n      <td>219736.609257</td>\n      <td>4.053582</td>\n      <td>1.844746e+11</td>\n      <td>2.519024e+11</td>\n      <td>1</td>\n      <td>6357.049040</td>\n      <td>-80.662349</td>\n      <td>0.929834</td>\n      <td>19.285640</td>\n    </tr>\n    <tr>\n      <th>17279</th>\n      <td>17279</td>\n      <td>2002-04-05 23:59:42</td>\n      <td>-82.946171</td>\n      <td>149.987690</td>\n      <td>6.876544e+06</td>\n      <td>0.001544</td>\n      <td>219725.997236</td>\n      <td>3.922587</td>\n      <td>1.785218e+11</td>\n      <td>2.459496e+11</td>\n      <td>1</td>\n      <td>6357.077170</td>\n      <td>-80.866752</td>\n      <td>-0.509777</td>\n      <td>19.191032</td>\n    </tr>\n  </tbody>\n</table>\n<p>17280 rows × 15 columns</p>\n</div>"
+     },
+     "execution_count": 132,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "outputs": [],
+   "source": [
+    "df = pd.read_csv('../tables/v2/conjunctions_clean_{mission}.csv'.format(mission='GF')).drop(['Unnamed: 0'], axis=1)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "0.28207862522780425"
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.nel_diff.std()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "0.06868817581190938"
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.nel_diff.mean()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "outputs": [],
+   "source": [
+    "df['n_duplicates'] = df.radar_mnemonic.apply(lambda x : len(x)/3 )\n",
+    "\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "47.0"
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['n_duplicates'].max()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "5.0"
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['n_duplicates'].median()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "0.44745222929936307"
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "843/len(df)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "325"
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(df[df['n_duplicates'] > 1])"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "0.6109022556390977"
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "325/len(df)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "0.3330469021024616"
+     },
+     "execution_count": 101,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = pd.read_csv('../tables/v2/conjunctions_clean_{mission}.csv'.format(mission='GF')).drop(['Unnamed: 0'], axis=1)\n",
+    "\n",
+    "df = df.dropna()\n",
+    "np.corrcoef(df.nel_gf,df.nel_radar)[0,1]"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "Location\nMillstone Hill     38\nPoker Flat        237\nResolute Bay        5\nSvalbard           32\nTromso             13\nName: n_duplicates, dtype: int64"
+     },
+     "execution_count": 96,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = pd.read_csv('../tables/v2/conjunctions_clean_{mission}.csv'.format(mission='GF')).drop(['Unnamed: 0'], axis=1)\n",
+    "df = df.dropna()\n",
+    "\n",
+    "# np.round(df.groupby('Location')['nel_diff'].mean(),2)\n",
+    "\n",
+    "df['n_duplicates'] = df.radar_mnemonic.apply(lambda x : len(x)/3 )\n",
+    "\n",
+    "df_plot = df[df['n_duplicates'] > 1]\n",
+    "df_plot.groupby('Location')['n_duplicates'].count()\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "Location\nArecibo             5\nJicamarca           7\nMillstone Hill     38\nPoker Flat        383\nResolute Bay        9\nSvalbard           40\nTromso             50\nName: n_duplicates, dtype: int64"
+     },
+     "execution_count": 97,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.groupby('Location')['n_duplicates'].count()\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tromso\n",
+      "Millstone Hill\n",
+      "Arecibo\n",
+      "Poker Flat\n",
+      "Jicamarca\n",
+      "Svalbard\n",
+      "Resolute Bay\n"
+     ]
+    }
+   ],
+   "source": [
+    "for location in df.Location.unique():\n",
+    "    df_plot = df[df.Location==location]\n",
+    "    print(location)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 102,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "28"
+     },
+     "execution_count": 102,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "7*4"
    ],
    "metadata": {
     "collapsed": false,
