--- a/aux_plots_tables.ipynb
+++ b/aux_plots_tables.ipynb
@@ -900,27 +900,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 115,
    "outputs": [
     {
-     "data": {
-      "text/plain": "Location\nMillstone Hill     38\nPoker Flat        237\nResolute Bay        5\nSvalbard           32\nTromso             13\nName: n_duplicates, dtype: int64"
-     },
-     "execution_count": 96,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "TypeError",
+     "evalue": "corr() missing 1 required positional argument: 'other'",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[0;31mTypeError\u001B[0m                                 Traceback (most recent call last)",
+      "\u001B[0;32m/var/folders/3r/7zz2j67172q4gc7svtjlw_bc0000gn/T/ipykernel_1531/1998115282.py\u001B[0m in \u001B[0;36m<module>\u001B[0;34m\u001B[0m\n\u001B[1;32m      9\u001B[0m \u001B[0;31m#\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m     10\u001B[0m \u001B[0;31m# df_plot = df[df['n_duplicates'] > 1]\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0;32m---> 11\u001B[0;31m \u001B[0;34m(\u001B[0m\u001B[0mdf\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mgroupby\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0;34m'Location'\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m[\u001B[0m\u001B[0;34m'nel_diff'\u001B[0m\u001B[0;34m]\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mcorr\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0m\u001B[1;32m     12\u001B[0m \u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m     13\u001B[0m \u001B[0;31m# np.corrcoef(df.nel_gf,df.nel_radar)[0,1]\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n",
+      "\u001B[0;32m~/opt/anaconda3/envs/MScThesis/lib/python3.8/site-packages/pandas/core/groupby/groupby.py\u001B[0m in \u001B[0;36mwrapper\u001B[0;34m(*args, **kwargs)\u001B[0m\n\u001B[1;32m    946\u001B[0m                 \u001B[0;32mreturn\u001B[0m \u001B[0mself\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mapply\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0mcurried\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m    947\u001B[0m \u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0;32m--> 948\u001B[0;31m             \u001B[0;32mreturn\u001B[0m \u001B[0mself\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0m_python_apply_general\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0mcurried\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0mself\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0m_obj_with_exclusions\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0m\u001B[1;32m    949\u001B[0m \u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m    950\u001B[0m         \u001B[0mwrapper\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0m__name__\u001B[0m \u001B[0;34m=\u001B[0m \u001B[0mname\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n",
+      "\u001B[0;32m~/opt/anaconda3/envs/MScThesis/lib/python3.8/site-packages/pandas/core/groupby/groupby.py\u001B[0m in \u001B[0;36m_python_apply_general\u001B[0;34m(self, f, data)\u001B[0m\n\u001B[1;32m   1307\u001B[0m             \u001B[0mdata\u001B[0m \u001B[0mafter\u001B[0m \u001B[0mapplying\u001B[0m \u001B[0mf\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m   1308\u001B[0m         \"\"\"\n\u001B[0;32m-> 1309\u001B[0;31m         \u001B[0mkeys\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0mvalues\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0mmutated\u001B[0m \u001B[0;34m=\u001B[0m \u001B[0mself\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mgrouper\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mapply\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0mf\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0mdata\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0mself\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0maxis\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0m\u001B[1;32m   1310\u001B[0m \u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m   1311\u001B[0m         return self._wrap_applied_output(\n",
+      "\u001B[0;32m~/opt/anaconda3/envs/MScThesis/lib/python3.8/site-packages/pandas/core/groupby/ops.py\u001B[0m in \u001B[0;36mapply\u001B[0;34m(self, f, data, axis)\u001B[0m\n\u001B[1;32m    839\u001B[0m             \u001B[0;31m# group might be modified\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m    840\u001B[0m             \u001B[0mgroup_axes\u001B[0m \u001B[0;34m=\u001B[0m \u001B[0mgroup\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0maxes\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0;32m--> 841\u001B[0;31m             \u001B[0mres\u001B[0m \u001B[0;34m=\u001B[0m \u001B[0mf\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0mgroup\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0m\u001B[1;32m    842\u001B[0m             \u001B[0;32mif\u001B[0m \u001B[0;32mnot\u001B[0m \u001B[0m_is_indexed_like\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0mres\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0mgroup_axes\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0maxis\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m:\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m    843\u001B[0m                 \u001B[0mmutated\u001B[0m \u001B[0;34m=\u001B[0m \u001B[0;32mTrue\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n",
+      "\u001B[0;32m~/opt/anaconda3/envs/MScThesis/lib/python3.8/site-packages/pandas/core/groupby/groupby.py\u001B[0m in \u001B[0;36mcurried\u001B[0;34m(x)\u001B[0m\n\u001B[1;32m    935\u001B[0m \u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m    936\u001B[0m             \u001B[0;32mdef\u001B[0m \u001B[0mcurried\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0mx\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m:\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0;32m--> 937\u001B[0;31m                 \u001B[0;32mreturn\u001B[0m \u001B[0mf\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0mx\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0;34m*\u001B[0m\u001B[0margs\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0;34m**\u001B[0m\u001B[0mkwargs\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0m\u001B[1;32m    938\u001B[0m \u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m    939\u001B[0m             \u001B[0;31m# preserve the name so we can detect it when calling plot methods,\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n",
+      "\u001B[0;31mTypeError\u001B[0m: corr() missing 1 required positional argument: 'other'"
+     ]
     }
    ],
    "source": [
-    "df = pd.read_csv('../tables/v2/conjunctions_clean_{mission}.csv'.format(mission='GF')).drop(['Unnamed: 0'], axis=1)\n",
+    "df_gr = pd.read_csv('../tables/v2/conjunctions_clean_{mission}.csv'.format(mission='GR')).drop(['Unnamed: 0'], axis=1)\n",
+    "df_gf = pd.read_csv('../tables/v2/conjunctions_clean_{mission}.csv'.format(mission='GF')).drop(['Unnamed: 0'], axis=1)\n",
+    "df = pd.concat([df_gr, df_gf], ignore_index=True, sort=True)\n",
+    "\n",
+    "# np.round(df['nel_diff'].std(),2)\n",
+    "#\n",
+    "# # df['n_duplicates'] = df.radar_mnemonic.apply(lambda x : len(x)/3 )\n",
+    "# #\n",
+    "# # df_plot = df[df['n_duplicates'] > 1]\n",
+    "# # df_plot.groupby('Location')['n_duplicates'].count()\n",
+    "\n",
     "df = df.dropna()\n",
-    "\n",
-    "# np.round(df.groupby('Location')['nel_diff'].mean(),2)\n",
-    "\n",
-    "df['n_duplicates'] = df.radar_mnemonic.apply(lambda x : len(x)/3 )\n",
-    "\n",
-    "df_plot = df[df['n_duplicates'] > 1]\n",
-    "df_plot.groupby('Location')['n_duplicates'].count()\n"
+    "np.corrcoef(df.nel_gf,df.nel_radar)[0,1]\n"
    ],
    "metadata": {
     "collapsed": false,
@@ -931,19 +942,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 107,
    "outputs": [
     {
      "data": {
-      "text/plain": "Location\nArecibo             5\nJicamarca           7\nMillstone Hill     38\nPoker Flat        383\nResolute Bay        9\nSvalbard           40\nTromso             50\nName: n_duplicates, dtype: int64"
+      "text/plain": "nan"
      },
-     "execution_count": 97,
+     "execution_count": 107,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.groupby('Location')['n_duplicates'].count()\n"
+    "\n",
+    "np.corrcoef(df.nel_gf,df.nel_radar)[0,1]"
    ],
    "metadata": {
     "collapsed": false,
@@ -954,26 +966,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 116,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Tromso\n",
-      "Millstone Hill\n",
-      "Arecibo\n",
-      "Poker Flat\n",
-      "Jicamarca\n",
-      "Svalbard\n",
-      "Resolute Bay\n"
+      "Tromso 0.4158304210425622\n",
+      "Millstone Hill 0.6981432321672609\n",
+      "Arecibo 0.8124993331900953\n",
+      "Poker Flat 0.6388955790292581\n",
+      "Jicamarca 0.8821926690261199\n",
+      "Svalbard 0.33938065795414296\n",
+      "Resolute Bay 0.45266345273743297\n"
      ]
     }
    ],
    "source": [
     "for location in df.Location.unique():\n",
     "    df_plot = df[df.Location==location]\n",
-    "    print(location)"
+    "    print(location,np.corrcoef(df_plot.nel_gf,df_plot.nel_radar)[0,1])"
    ],
    "metadata": {
     "collapsed": false,
@@ -1007,8 +1019,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 103,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "2325"
+     },
+     "execution_count": 103,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "1793 + 532"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 112,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "0.5075268817204301"
+     },
+     "execution_count": 112,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [],
    "metadata": {
     "collapsed": false,
